# cmd/gog/new/_template/internal/domains/post/handler.go
@@ -2,6 +2,8 @@ package post
 
 import (
 	"github.com/PROJECT_NAME/internal/config"
+	"github.com/PROJECT_NAME/internal/domains/interfaces"
+	"github.com/PROJECT_NAME/internal/domains/model"
 	"github.com/PROJECT_NAME/internal/errors"
 	"github.com/PROJECT_NAME/internal/logger"
 	"github.com/gofiber/fiber/v2"
@@ -12,9 +14,8 @@ type (
 	handlerDependencies interface {
 		logger.LoggerProvider
 		config.ConfigProvider
-		ServiceProvider
+		interfaces.PostServiceProvider
 		errors.ErrorProvider
-		ServiceProvider
 	}
 
 	Handler struct {
@@ -40,13 +41,13 @@ func (h *Handler) RegisterRoutes(r fiber.Router) {
 // @Tags			posts
 // @Accept			json
 // @Produce		json
-// @Param			post	body	post.CreatePostDTO	true	"Post data"
+// @Param			post	body	model.CreatePostDTO	true	"Post data"
 // @Success		201		"Created"
 // @Failure		400		{object}	errors.ErrorResponse
 // @Failure		500		{object}	errors.ErrorResponse
 // @Router			/posts [post]
 func (h *Handler) CreatePost(c *fiber.Ctx) error {
-	dto := &CreatePostDTO{}
+	dto := &model.CreatePostDTO{}
 
 	if err := c.BodyParser(dto); err != nil {
 		return h.d.NewError(errors.ErrInternal, err.Error())
@@ -65,7 +66,7 @@ func (h *Handler) CreatePost(c *fiber.Ctx) error {
 // @Accept			json
 // @Produce		json
 // @Param			id	path		string	true	"Post ID"
-// @Success		200	{object}	Post
+// @Success		200	{object}	model.Post
 // @Failure		400	{object}	errors.ErrorResponse
 // @Failure		404	{object}	errors.ErrorResponse
 // @Failure		500	{object}	errors.ErrorResponse
@@ -73,7 +74,7 @@ func (h *Handler) CreatePost(c *fiber.Ctx) error {
 func (h *Handler) GetPost(c *fiber.Ctx) error {
 	id := c.Params("id")
 
-	post := &Post{}
+	post := &model.Post{}
 	if err := h.d.PostService().GetPostByID(c.Context(), uuid.MustParse(id), post); err != nil {
 		return h.d.NewError(errors.ErrInternal, err.Error())
 	}
